force-app/main/default/objects/eNett_Contract__c/fields/T_C_Acceptance_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>T_C_Acceptance_Email_Sent__c</fullName>
    <label>T&amp;C Acceptance Email Sent</label>
    <type>Date</type>
</CustomField>