force-app/main/default/objects/eNett_Contract__c/fields/T_C_Modification_Details__c.field-meta.xml
<CustomField>
    <fullName>T_C_Modification_Details__c</fullName>
    <inlineHelpText>Please use this for other clauses that are not highlighted above, such as Virtual Terminal exemption.</inlineHelpText>
    <label>Other T&amp;C Modifications</label>
    <type>TextArea</type>
</CustomField>