force-app/main/default/objects/eNett_Contract__c/fields/T_C_Modifications_Required_Listed__c.field-meta.xml
<CustomField>
    <fullName>T_C_Modifications_Required_Listed__c</fullName>
    <label>T&amp;C Modifications Required Listed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>