force-app/main/default/objects/eNett_Contract__c/fields/Technology_Fund_Details__c.field-meta.xml
<CustomField>
    <fullName>Technology_Fund_Details__c</fullName>
    <inlineHelpText>Please input the proposed technology fund details here if you have ticked the field above</inlineHelpText>
    <label>Technology Fund Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>