force-app/main/default/objects/eNett_Contract__c/fields/Template_Account_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Template_Account_Billing_Address__c</fullName>
    <formula>Account_Name__r.BillingStreet &amp; &quot; , &quot; &amp; Account_Name__r.BillingCity &amp; &quot; , &quot; &amp; Account_Name__r.BillingState &amp; &quot; . &quot; &amp; Account_Name__r.BillingPostalCode &amp; &quot; . &quot; &amp; Account_Name__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Account Billing Address</label>
    <type>Text</type>
</CustomField>