force-app/main/default/objects/eNett_Contract__c/fields/Template_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Account_Name__c</fullName>
    <formula>Account_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Account Name</label>
    <type>Text</type>
</CustomField>