force-app/main/default/objects/eNett_Contract__c/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Terms and Conditions</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>eNett Contract</relationshipLabel>
    <relationshipName>eNett_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>