force-app/main/default/objects/eNett_Contract__c/fields/Tier_1_Interchange_Share__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Interchange_Share__c</fullName>
    <label>Tier 1 % Interchange Share</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>