force-app/main/default/objects/eNett_Contract__c/fields/Tier_2_Fixed_Share__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Fixed_Share__c</fullName>
    <inlineHelpText>Please provide this data in the following format – e.g. 20% should be added in as 0.2.</inlineHelpText>
    <label>Tier 2 Fixed % Share (BPS)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>