force-app/main/default/objects/eNett_Contract__c/fields/Tier_2_Int_Range_To__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Int_Range_To__c</fullName>
    <inlineHelpText>Please input the volume details here</inlineHelpText>
    <label>Tier 2 Interchange Range To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>