force-app/main/default/objects/eNett_Contract__c/fields/Tier_2_Interchange_Share__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Interchange_Share__c</fullName>
    <label>Tier 2 % Interchange Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>