force-app/main/default/objects/eNett_Contract__c/fields/Tiered_Rebate_Calculation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Tiered_Rebate_Calculation_Frequency__c</fullName>
    <label>Tiered Rebate Calculation Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>