force-app/main/default/objects/eNett_Contract__c/fields/Trial_Period__c.field-meta.xml
<CustomField>
    <fullName>Trial_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trial Period</label>
    <type>Checkbox</type>
</CustomField>