force-app/main/default/objects/eNett_Contract__c/fields/Trial_Period_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Trial_Period_Term_Years__c</fullName>
    <label>Trial Period Term (Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>