force-app/main/default/objects/eNett_Contract__c/fields/VAN_Currencies__c.field-meta.xml
<CustomField>
    <fullName>VAN_Currencies__c</fullName>
    <label>VAN Currencies</label>
    <length>100</length>
    <type>Text</type>
</CustomField>