force-app/main/default/objects/eNett_Contract__c/fields/Volume_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Volume_Commitments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick for Yes</inlineHelpText>
    <label>Volume Commitments</label>
    <type>Checkbox</type>
</CustomField>