force-app/main/default/objects/eNett_Contract__c/fields/Volume_Commitments_Details__c.field-meta.xml
<CustomField>
    <fullName>Volume_Commitments_Details__c</fullName>
    <inlineHelpText>Please input the proposed volume commitment details here if you have ticked the field above – please note that these may be linked to a tech fund or a short term incentive</inlineHelpText>
    <label>Volume Commitments Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>