force-app/main/default/objects/eNett_Contract__c/fields/Waive_Subscription_Fee_Details__c.field-meta.xml
<CustomField>
    <fullName>Waive_Subscription_Fee_Details__c</fullName>
    <inlineHelpText>If you are waiving the fee or reducing the fee, enter term of discount here.</inlineHelpText>
    <label>Waive Subscription Fee Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>