force-app/main/default/objects/eNett_Contract__c/fields/WUBS__c.field-meta.xml
<CustomField>
    <fullName>WUBS__c</fullName>
    <inlineHelpText>Tick for Yes</inlineHelpText>
    <label>WUBS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WUBS - no</fullName>
            </value>
            <value>
                <fullName>WUBS - yes (eNett Paying)</fullName>
            </value>
            <value>
                <fullName>WUBS - yes (client Paying)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>