force-app/main/default/objects/eNett_Contract__c/fields/X0_Month_Expiry_Notification__c.field-meta.xml
<CustomField>
    <fullName>X0_Month_Expiry_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be checked 1 hour AFTER the contract expiry date.</description>
    <label>0 Month Expiry Notification</label>
    <type>Checkbox</type>
</CustomField>