force-app/main/default/objects/eNett_Contract__c/fields/X14_Day_Reminder_Notification__c.field-meta.xml
<CustomField>
    <fullName>X14_Day_Reminder_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>14 Day Reminder Notification</label>
    <type>Checkbox</type>
</CustomField>