force-app/main/default/objects/eNett_Contract__c/fields/X1_Month_Expiry_Notification__c.field-meta.xml
<CustomField>
    <fullName>X1_Month_Expiry_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be checked 1 month prior to the contract expiry date.</description>
    <label>1 Month Expiry Notification</label>
    <type>Checkbox</type>
</CustomField>