force-app/main/default/objects/eNett_Contract__c/fields/X3_Month_Expiry_Notification__c.field-meta.xml
<CustomField>
    <fullName>X3_Month_Expiry_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be checked 3 months prior to the contract expiry date.</description>
    <label>3 Month Expiry Notification</label>
    <type>Checkbox</type>
</CustomField>