force-app/main/default/objects/eNett_Contract__c/recordTypes/eNett_Contract_Base.recordType-meta.xml
<RecordType>
    <fullName>eNett_Contract_Base</fullName>
    <active>true</active>
    <label>eNett Contract Base</label>
</RecordType>