force-app/main/default/objects/eNett_Contract__c/recordTypes/eNett_Contract_Flat.recordType-meta.xml
<RecordType>
    <fullName>eNett_Contract_Flat</fullName>
    <active>true</active>
    <label>eNett Contract Flat</label>
</RecordType>