force-app/main/default/objects/eNett_Contract__c/recordTypes/eNett_Contract_Generic.recordType-meta.xml
<RecordType>
    <fullName>eNett_Contract_Generic</fullName>
    <active>true</active>
    <label>eNett Contract Generic</label>
</RecordType>