force-app/main/default/objects/eNett_Contract__c/recordTypes/eNett_Custom_Contract.recordType-meta.xml
<RecordType>
    <fullName>eNett_Custom_Contract</fullName>
    <active>true</active>
    <label>eNett Custom Contract</label>
</RecordType>