force-app/main/default/objects/eNett_Contract__c/recordTypes/eNett_EFT_Contract.recordType-meta.xml
<RecordType>
    <fullName>eNett_EFT_Contract</fullName>
    <active>true</active>
    <label>eNett EFT Contract</label>
</RecordType>