force-app/main/default/objects/eNett_Contract__c/recordTypes/eNett_Tiered_Contract.recordType-meta.xml
<RecordType>
    <fullName>eNett_Tiered_Contract</fullName>
    <active>true</active>
    <label>eNett Tiered Contract</label>
</RecordType>