force-app/main/default/objects/eNett_Contract__c/recordTypes/Service_Provider.recordType-meta.xml
<RecordType>
    <fullName>Service_Provider</fullName>
    <active>true</active>
    <label>Service Provider</label>
</RecordType>