force-app/main/default/objects/eNett_Contract__c/validationRules/Cross_Currency_Details_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Cross_Currency_Details_Mandatory</fullName>
    <active>true</active>
    <description>The Cross Currency Details field must be populated when the Cross Currency Fee checkbox has been ticked.</description>
    <errorConditionFormula>AND( Cross_Currency_Fee_0_81__c =True,ISBLANK( Cross_Currency_Details__c ))</errorConditionFormula>
    <errorMessage>The Cross Currency Fee Details field must be populated when the Cross Currency Fee checkbox has been ticked.</errorMessage>
</ValidationRule>