force-app/main/default/objects/eNett_Contract__c/validationRules/Disallow_Change_to_Contract_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_Change_to_Contract_Type</fullName>
    <active>false</active>
    <description>This prevents the user from changing the Contract Type if a value already exists.</description>
    <errorConditionFormula>AND( 
ISCHANGED( Contract_Type__c ), 
NOT(ISBLANK(PRIORVALUE( Contract_Type__c ))))</errorConditionFormula>
    <errorMessage>You cannot change the Contract Type if it already has been set. Undo\Cancel these changes to continue.</errorMessage>
</ValidationRule>