force-app/main/default/objects/eNett_Contract__c/validationRules/Exclusivity_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Exclusivity_Mandatory</fullName>
    <active>true</active>
    <description>The Exclusivity % field must be populated when the Exclusivity Clause picklist has been set to Yes - Percentage.</description>
    <errorConditionFormula>AND(ISPICKVAL(Exclusivity_Clause__c,&quot;Yes - Percentage&quot;),ISBLANK( Exclusivity__c ))</errorConditionFormula>
    <errorMessage>The Exclusivity % field must be populated when the Exclusivity Clause picklist has been set to Yes - Percentage.</errorMessage>
</ValidationRule>