force-app/main/default/objects/eNett_Contract__c/validationRules/Flat_Fixed_Amount_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Flat_Fixed_Amount_Values</fullName>
    <active>true</active>
    <description>Ensures % Fixed Amount is a whole number no greater than 10</description>
    <errorConditionFormula>AND( RecordType.DeveloperName =&#39;eNett_Contract_Flat&#39;, Fixed_Amount__c &gt; 10 )</errorConditionFormula>
    <errorMessage>Fixed % Amount appears to be excessive.  This is a percentage amount, not the BPS amount.  Please amend and Save.</errorMessage>
</ValidationRule>