force-app/main/default/objects/eNett_Contract__c/validationRules/Flat_Incentive_Type_Interchange.validationRule-meta.xml
<ValidationRule>
    <fullName>Flat_Incentive_Type_Interchange</fullName>
    <active>true</active>
    <description>For &#39;Flat&#39; Rebate, &#39;% of Interchange&#39; Incentive Contracts, you must enter a &#39;Interchange Amount&#39; and NO &#39;Fixed % Amount&#39;.</description>
    <errorConditionFormula>AND( 
RecordType.DeveloperName =&quot;eNett_Contract_Flat&quot;,
ISPICKVAL( Incentive_Type__c , &#39;% of Interchange&#39;),
OR(NOT(ISBLANK(Fixed_Amount__c)),
ISBLANK( Interchange_Amount__c ))
)</errorConditionFormula>
    <errorMessage>For &#39;Flat&#39; Rebate, &#39;% of Interchange&#39; Incentive Contracts, you must enter a &#39;Interchange Amount&#39; and NO &#39;Fixed % Amount&#39;.</errorMessage>
</ValidationRule>