force-app/main/default/objects/eNett_Contract__c/validationRules/Flat_Interchange_Amount_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Flat_Interchange_Amount_Values</fullName>
    <active>true</active>
    <description>Ensures Interchange_Amount__c is a whole number no greater than 100</description>
    <errorConditionFormula>AND( RecordType.DeveloperName =&#39;eNett_Contract_Flat&#39;,
OR( FLOOR( Interchange_Amount__c ) &lt;&gt; Interchange_Amount__c     ,Interchange_Amount__c &gt; 210 )
)</errorConditionFormula>
    <errorMessage>Interchange Amount must be a whole number no greater than 100.</errorMessage>
</ValidationRule>