force-app/main/default/objects/eNett_Contract__c/validationRules/Short_Term_Incentive_Details_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Short_Term_Incentive_Details_Mandatory</fullName>
    <active>true</active>
    <description>The Short Term Incentive Details field must be populated when the Short Term Incentive checkbox has been ticked.</description>
    <errorConditionFormula>AND( Short_Term_Incentive__c =True,ISBLANK( Short_Term_Incentive_Details__c ))</errorConditionFormula>
    <errorMessage>The Short Term Incentive Details field must be populated when the Short Term Incentive checkbox has been ticked.</errorMessage>
</ValidationRule>