force-app/main/default/objects/eNett_Contract__c/validationRules/Technology_Fund_Details_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Technology_Fund_Details_Mandatory</fullName>
    <active>true</active>
    <description>The Technology Fund Details field must be populated when the Technology Fund checkbox has been ticked.</description>
    <errorConditionFormula>AND( Technology_Fund_API_Integration__c =True,ISBLANK( Technology_Fund_Details__c ))</errorConditionFormula>
    <errorMessage>The Technology Fund Details field must be populated when the Technology Fund checkbox has been ticked.</errorMessage>
</ValidationRule>