force-app/main/default/objects/eNett_Contract__c/validationRules/Tiered_Fixed_Amount_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Tiered_Fixed_Amount_Values</fullName>
    <active>true</active>
    <description>Ensures Max % Fixed Share is no greater than 10</description>
    <errorConditionFormula>AND(RecordType.DeveloperName =&#39;eNett_Tiered_Contract&#39;,Max_Fixed_Share__c &gt; 10)</errorConditionFormula>
    <errorMessage>Fixed % Amount appears to be excessive. This is a percentage amount, not the BPS amount. Please amend and Save.</errorMessage>
</ValidationRule>