force-app/main/default/objects/eNett_Contract__c/validationRules/Tiered_Incentive_Type_Fixed.validationRule-meta.xml
<ValidationRule>
    <fullName>Tiered_Incentive_Type_Fixed</fullName>
    <active>true</active>
    <description>For &#39;Tiered&#39; Rebate, &#39;Fixed %&#39; Incentive Contracts, you must enter a &#39;Tier Fixed % Share&#39; and NO &#39;Tier % Interchange Share&#39;.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&#39;eNett_Tiered_Contract&#39;,
ISPICKVAL(Incentive_Type__c  , &#39;Fixed %&#39;),
OR(NOT(ISBLANK( Tier_1_Interchange_Share__c )),
ISBLANK( Tier_1_Fixed_Share__c ))
)</errorConditionFormula>
    <errorMessage>For &#39;Tiered&#39; Rebate, &#39;Fixed %&#39; Incentive Contracts, you must enter a &#39;Tier Fixed % Share&#39; and NO &#39;Tier % Interchange Share&#39;.</errorMessage>
</ValidationRule>