force-app/main/default/objects/eNett_Contract__c/validationRules/Tiered_Interchange_Amount_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Tiered_Interchange_Amount_Values</fullName>
    <active>true</active>
    <description>Ensures Interchange_Amount__c is a whole number no greater than 100</description>
    <errorConditionFormula>AND( RecordType.DeveloperName =&#39;eNett_Tiered_Contract&#39;,
OR( FLOOR(  Max_Interchange_Share__c  ) &lt;&gt; Max_Interchange_Share__c,Max_Interchange_Share__c &gt; 100 )
)</errorConditionFormula>
    <errorMessage>Interchange Amount must be a whole number no greater than 100.</errorMessage>
</ValidationRule>