force-app/main/default/objects/eNett_Contract__c/validationRules/Volume_Commitments_Details_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Volume_Commitments_Details_Mandatory</fullName>
    <active>true</active>
    <description>The Volume Commitments Details field must be populated when the Volume Commitments checkbox has been ticked.</description>
    <errorConditionFormula>AND( Volume_Commitments__c =True,ISBLANK( Volume_Commitments_Details__c))</errorConditionFormula>
    <errorMessage>The Volume Commitments Details field must be populated when the Volume Commitments checkbox has been ticked.</errorMessage>
</ValidationRule>