force-app/main/default/objects/eNett_Contract__c/listViews/Legal_Queue_eNett_Contract.listView-meta.xml
<ListView>
    <fullName>Legal_Queue_eNett_Contract</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>eNett_Product__c</columns>
    <columns>Status__c</columns>
    <columns>Contract_Stage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Type__c</field>
        <operation>equals</operation>
        <value>Custom</value>
    </filters>
    <label>Custom Contracts</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>